Revert "I am fixing the html UI Title to "College Exam Pass/Fail Predictor""
This reverts commit 348c7a4fd12978ca246265115b5ba3d6163561eb.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>🎓 College Exam Pass/Fail Predictor</h1>
+    <h1>🎓 Pass/Fail Predictor</h1>
 
     <input type="number" id="scoreInput" placeholder="Enter Previous Exam Score" />
     <input type="number" id="hoursInput" placeholder="Enter Hours Studied " />
