# change - more specific

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
       
       
       <div class="description">
-        Use your previous exam, study hours , & sleep to predict if you will Pass or Fail. Real-World Exam Data is used to train the model. 
+        Use your previous exam, study hours , & sleep to predict if you will Pass or Fail your Next Exam. Real-World Exam Data is used to train the model. 
       </div>
 
       <div class="input-group">
