"AI" Title Change

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,11 +9,11 @@
 <body>
   <div class="container">
     <div class="predictor-card">
-      <h1 class="title">College Exam Predictor</h1>
+      <h1 class="title">AI College Exam Predictor</h1>
       
       
       <div class="description">
-        Use your previous exam, study hours , & sleep to predict if you will Pass or Fail your Next Exam. Real-World Exam Data is used to train the model. 
+        Use your previous exam, study hours , & sleep to predict if you will Pass or Fail your Next Exam. Real-World Exam Data is used to train Logistic Regression Model. 
       </div>
 
       <div class="input-group">
